--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "monk": "~0.8.1",
     "moment": "~2.5.1",
     "koa": "^0.5.2",
-    "koa-route": "^1.1.1"
+    "koa-route": "^1.1.1",
+    "underscore": "^1.6.0"
   }
 }
