--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "homepage": "https://github.com/velveteer/boulder",
   "dependencies": {
     "co": "~3.0.5",
-    "co-mssql": "~0.1.1",
-    "underscore.string": "~2.3.3",
     "co-monk": "~1.0.0",
-    "monk": "~0.8.1",
-    "moment": "~2.5.1",
+    "co-mssql": "~0.1.1",
+    "co-pg": "^1.2.3",
     "koa": "^0.5.2",
     "koa-route": "^1.1.1",
-    "underscore": "^1.6.0"
+    "moment": "~2.5.1",
+    "monk": "~0.8.1",
+    "pg": "^3.3.0",
+    "underscore": "^1.6.0",
+    "underscore.string": "~2.3.3"
   }
 }
