Change date format and order by date on transcript query.

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ http {
     server {
         listen 8080;
         server_name localhost;
+
         location /chats {
             postgres_pass database;
             rds_json on;
@@ -23,7 +24,7 @@ http {
             postgres_pass database;
             rds_json on;
             postgres_escape $escaped_id $id;
-            postgres_query    HEAD GET  "SELECT * FROM transcripts WHERE chat_id=$escaped_id";
+            postgres_query    HEAD GET  "SELECT * FROM transcripts WHERE chat_id=$escaped_id ORDER BY created_at";
         }
     }
 }
